--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="action_settings">Settings</string>
 
     <string name="test">%1$s reps %2$s</string>
-    <string name="no_gesture_found">Gesture not found. You can add more gestures by clicking on Plus button.</string>
+    <string name="no_gesture_found">Gesture not found. You can manage gestures by clicking on FAB above.</string>
     <string name="draw_gesture_here">Draw your gesture here..</string>
+    <string name="add">Add</string>
+    <string name="gestures_list">Gestures list</string>
 </resources>
